--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "econtract/crm",
     "description": "E-Contract BVBA CRM API package",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "keywords": ["API", "E-Contract", "Aanbieders", "CRM"],
     "homepage": "http://aanbieders.be",
     "license": "proprietary",
@@ -20,6 +20,7 @@
     "require": {
         "php": ">=5.6.0",
         "illuminate/support": "~5.1",
+        "ixudra/curl": "~6.0",
         "vlucas/phpdotenv": "~2.0"
     },
 
