--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "econtract/crm",
     "description": "E-Contract BVBA CRM API package",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "keywords": ["API", "E-Contract", "Aanbieders", "CRM"],
     "homepage": "http://aanbieders.be",
     "license": "proprietary",
@@ -31,7 +31,7 @@
 
     "autoload": {
         "psr-0": {
-            "econtract\\crm\\": "src/"
+            "Econtract\\Crm\\": "src/"
         }
     },
 
